.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Metadata_Item__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__API_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Component_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Component Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Folder__c</fullName>
        <label>Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Is_Retrieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retrieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Label__c</fullName>
        <description>Readable Name of Component</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Modified_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Changed On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Updated_By__c</fullName>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Snapshot__c</fullName>
        <label>Snapshot</label>
        <referenceTo>Flosum__Snapshot__c</referenceTo>
        <relationshipLabel>Components Retrieved</relationshipLabel>
        <relationshipName>Metadata_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Metadata Item</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>Flosum__Label__c</columns>
        <columns>Flosum__API_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Metadata Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Items</pluralLabel>
    <recordTypes>
        <fullName>Flosum__ActionLinkGroupTemplate</fullName>
        <active>true</active>
        <label>ActionLinkGroupTemplate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AnalyticSnapshot</fullName>
        <active>true</active>
        <label>AnalyticSnapshot</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ApexClass</fullName>
        <active>true</active>
        <label>ApexClass</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ApexComponent</fullName>
        <active>true</active>
        <label>ApexComponent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ApexPage</fullName>
        <active>true</active>
        <label>ApexPage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ApexTestSuite</fullName>
        <active>true</active>
        <label>ApexTestSuite</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ApexTrigger</fullName>
        <active>true</active>
        <label>ApexTrigger</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AppMenu</fullName>
        <active>true</active>
        <label>AppMenu</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ApprovalProcess</fullName>
        <active>true</active>
        <label>ApprovalProcess</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AssignmentRule</fullName>
        <active>true</active>
        <label>AssignmentRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AssignmentRules</fullName>
        <active>true</active>
        <label>AssignmentRules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Audience</fullName>
        <active>true</active>
        <label>Audience</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AuraDefinitionBundle</fullName>
        <active>true</active>
        <label>AuraDefinitionBundle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AuthProvider</fullName>
        <active>true</active>
        <label>AuthProvider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AutoResponseRule</fullName>
        <active>true</active>
        <label>AutoResponseRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AutoResponseRules</fullName>
        <active>true</active>
        <label>AutoResponseRules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__BaseSharingRule</fullName>
        <active>true</active>
        <label>BaseSharingRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Bot</fullName>
        <active>true</active>
        <label>Bot</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__BrandingSet</fullName>
        <active>true</active>
        <label>BrandingSet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__BusinessProcess</fullName>
        <active>true</active>
        <label>BusinessProcess</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CMSConnectSource</fullName>
        <active>true</active>
        <label>CMSConnectSource</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CallCenter</fullName>
        <active>true</active>
        <label>CallCenter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CampaignInfluenceModel</fullName>
        <active>true</active>
        <label>CampaignInfluenceModel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Certificate</fullName>
        <active>true</active>
        <label>Certificate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ChannelLayout</fullName>
        <active>true</active>
        <label>ChannelLayout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CleanDataService</fullName>
        <active>true</active>
        <label>CleanDataService</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Community</fullName>
        <active>true</active>
        <label>Community</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CommunityTemplateDefinition</fullName>
        <active>true</active>
        <label>CommunityTemplateDefinition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CommunityThemeDefinition</fullName>
        <active>true</active>
        <label>CommunityThemeDefinition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CompactLayout</fullName>
        <active>true</active>
        <label>CompactLayout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ConnectedApp</fullName>
        <active>true</active>
        <label>ConnectedApp</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ContentAsset</fullName>
        <active>true</active>
        <label>ContentAsset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CorsWhitelistOrigin</fullName>
        <active>true</active>
        <label>CorsWhitelistOrigin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CriteriaBasedSharingRule</fullName>
        <active>true</active>
        <label>CriteriaBasedSharingRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CspTrustedSite</fullName>
        <active>true</active>
        <label>CspTrustedSite</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomApplication</fullName>
        <active>true</active>
        <label>CustomApplication</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomApplicationComponent</fullName>
        <active>true</active>
        <label>CustomApplicationComponent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomField</fullName>
        <active>true</active>
        <label>CustomField</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomLabel</fullName>
        <active>true</active>
        <label>CustomLabel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomLabels</fullName>
        <active>true</active>
        <label>CustomLabels</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomMetadata</fullName>
        <active>true</active>
        <label>CustomMetadata</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomObject</fullName>
        <active>true</active>
        <label>CustomObject</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomObjectTranslation</fullName>
        <active>true</active>
        <label>CustomObjectTranslation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomPageWebLink</fullName>
        <active>true</active>
        <label>CustomPageWebLink</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomPermission</fullName>
        <active>true</active>
        <label>CustomPermission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomSite</fullName>
        <active>true</active>
        <label>CustomSite</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomTab</fullName>
        <active>true</active>
        <label>CustomTab</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Dashboard</fullName>
        <active>true</active>
        <label>Dashboard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__DashboardFolder</fullName>
        <active>true</active>
        <label>DashboardFolder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__DataCategoryGroup</fullName>
        <active>true</active>
        <label>DataCategoryGroup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__DelegateGroup</fullName>
        <active>true</active>
        <label>DelegateGroup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Document</fullName>
        <active>true</active>
        <label>Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__DocumentFolder</fullName>
        <active>true</active>
        <label>DocumentFolder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__DuplicateRule</fullName>
        <active>true</active>
        <label>DuplicateRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EclairGeoData</fullName>
        <active>true</active>
        <label>EclairGeoData</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EmailFolder</fullName>
        <active>true</active>
        <label>EmailFolder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EmailServicesFunction</fullName>
        <active>true</active>
        <label>EmailServicesFunction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EmailTemplate</fullName>
        <active>true</active>
        <label>EmailTemplate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EmailTemplateFolder</fullName>
        <active>true</active>
        <label>EmailTemplateFolder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EmbeddedServiceBranding</fullName>
        <active>true</active>
        <label>EmbeddedServiceBranding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EmbeddedServiceConfig</fullName>
        <active>true</active>
        <label>EmbeddedServiceConfig</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EmbeddedServiceLiveAgent</fullName>
        <active>true</active>
        <label>EmbeddedServiceLiveAgent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EntitlementProcess</fullName>
        <active>true</active>
        <label>EntitlementProcess</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EntitlementTemplate</fullName>
        <active>true</active>
        <label>EntitlementTemplate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EscalationRule</fullName>
        <active>true</active>
        <label>EscalationRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EscalationRules</fullName>
        <active>true</active>
        <label>EscalationRules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ExternalDataSource</fullName>
        <active>true</active>
        <label>ExternalDataSource</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ExternalServiceRegistration</fullName>
        <active>true</active>
        <label>ExternalServiceRegistration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__FieldSet</fullName>
        <active>true</active>
        <label>FieldSet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__FlexiPage</fullName>
        <active>true</active>
        <label>FlexiPage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Flow</fullName>
        <active>true</active>
        <label>Flow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__FlowCategory</fullName>
        <active>true</active>
        <label>FlowCategory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__FlowDefinition</fullName>
        <active>true</active>
        <label>FlowDefinition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__GlobalPicklist</fullName>
        <active>true</active>
        <label>GlobalPicklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__GlobalPicklistValue</fullName>
        <active>true</active>
        <label>GlobalPicklistValue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__GlobalValueSet</fullName>
        <active>true</active>
        <label>GlobalValueSet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__GlobalValueSetTranslation</fullName>
        <active>true</active>
        <label>GlobalValueSetTranslation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Group</fullName>
        <active>true</active>
        <label>Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__HomePageComponent</fullName>
        <active>true</active>
        <label>HomePageComponent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__HomePageLayout</fullName>
        <active>true</active>
        <label>HomePageLayout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__InstalledPackage</fullName>
        <active>true</active>
        <label>InstalledPackage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__KeywordList</fullName>
        <active>true</active>
        <label>KeywordList</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Layout</fullName>
        <active>true</active>
        <label>Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__LeadConvertSettings</fullName>
        <active>true</active>
        <label>LeadConvertSettings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Letterhead</fullName>
        <active>true</active>
        <label>Letterhead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__LightningBolt</fullName>
        <active>true</active>
        <label>LightningBolt</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__LightningComponentBundle</fullName>
        <active>true</active>
        <label>LightningComponentBundle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__LightningExperienceTheme</fullName>
        <active>true</active>
        <label>LightningExperienceTheme</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ListView</fullName>
        <active>true</active>
        <label>ListView</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__LiveChatAgentConfig</fullName>
        <active>true</active>
        <label>LiveChatAgentConfig</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__LiveChatButton</fullName>
        <active>true</active>
        <label>LiveChatButton</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__LiveChatDeployment</fullName>
        <active>true</active>
        <label>LiveChatDeployment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__LiveChatSensitiveDataRule</fullName>
        <active>true</active>
        <label>LiveChatSensitiveDataRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ManagedTopics</fullName>
        <active>true</active>
        <label>ManagedTopics</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__MatchingRules</fullName>
        <active>true</active>
        <label>MatchingRules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__MilestoneType</fullName>
        <active>true</active>
        <label>MilestoneType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__MlDomain</fullName>
        <active>true</active>
        <label>MlDomain</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ModerationRule</fullName>
        <active>true</active>
        <label>ModerationRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__NamedCredential</fullName>
        <active>true</active>
        <label>NamedCredential</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Network</fullName>
        <active>true</active>
        <label>Network</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__NetworkBranding</fullName>
        <active>true</active>
        <label>NetworkBranding</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PathAssistant</fullName>
        <active>true</active>
        <label>PathAssistant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PermissionSet_ApexClass</fullName>
        <active>true</active>
        <label>PermissionSet_ApexClass</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PermissionSet_ApexPage</fullName>
        <active>true</active>
        <label>PermissionSet_ApexPage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PermissionSet_CustomObject</fullName>
        <active>true</active>
        <label>PermissionSet_CustomObject</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PermissionSet_Layout</fullName>
        <active>true</active>
        <label>PermissionSet_Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PermissionSet_Other_Permissions</fullName>
        <active>true</active>
        <label>PermissionSet_Other_Permissions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PermissonSet</fullName>
        <active>true</active>
        <label>PermissionSet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PlatformCachePartition</fullName>
        <active>true</active>
        <label>PlatformCachePartition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Portal</fullName>
        <active>true</active>
        <label>Portal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PostTemplate</fullName>
        <active>true</active>
        <label>PostTemplate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PresenceDeclineReason</fullName>
        <active>true</active>
        <label>PresenceDeclineReason</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PresenceUserConfig</fullName>
        <active>true</active>
        <label>PresenceUserConfig</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Profile</fullName>
        <active>true</active>
        <label>Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ProfilePasswordPolicy</fullName>
        <active>true</active>
        <label>ProfilePasswordPolicy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ProfileSessionSetting</fullName>
        <active>true</active>
        <label>ProfileSessionSetting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Profile_ApexClass</fullName>
        <active>true</active>
        <label>Profile_ApexClass</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Profile_ApexPage</fullName>
        <active>true</active>
        <label>Profile_ApexPage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Profile_CustomObject</fullName>
        <active>true</active>
        <label>Profile_CustomObject</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Profile_Layout</fullName>
        <active>true</active>
        <label>Profile_Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Profile_Other_Permissions</fullName>
        <active>true</active>
        <label>Profile_Other_Permissions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Queue</fullName>
        <active>true</active>
        <label>Queue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__QueueRoutingConfig</fullName>
        <active>true</active>
        <label>QueueRoutingConfig</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__QuickAction</fullName>
        <active>true</active>
        <label>QuickAction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__RecordType</fullName>
        <active>true</active>
        <label>RecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__RemoteSiteSetting</fullName>
        <active>true</active>
        <label>RemoteSiteSetting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Report</fullName>
        <active>true</active>
        <label>Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ReportFolder</fullName>
        <active>true</active>
        <label>ReportFolder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ReportType</fullName>
        <active>true</active>
        <label>ReportType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Role</fullName>
        <active>true</active>
        <label>Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__SamlSsoConfig</fullName>
        <active>true</active>
        <label>SamlSsoConfig</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Scontrol</fullName>
        <active>true</active>
        <label>Scontrol</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ServiceChannel</fullName>
        <active>true</active>
        <label>ServiceChannel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ServicePresenceStatus</fullName>
        <active>true</active>
        <label>ServicePresenceStatus</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Settings</fullName>
        <active>true</active>
        <label>Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__SharingCriteriaRule</fullName>
        <active>true</active>
        <label>SharingCriteriaRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__SharingOwnerRule</fullName>
        <active>true</active>
        <label>SharingOwnerRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__SharingReason</fullName>
        <active>true</active>
        <label>SharingReason</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__SharingSet</fullName>
        <active>true</active>
        <label>SharingSet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__SiteDotCom</fullName>
        <active>true</active>
        <label>SiteDotCom</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Skill</fullName>
        <active>true</active>
        <label>Skill</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__StandardValueSet</fullName>
        <active>true</active>
        <label>StandardValueSet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__StandardValueSetTranslation</fullName>
        <active>true</active>
        <label>StandardValueSetTranslation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__StaticResource</fullName>
        <active>true</active>
        <description>Represents a static resource file, often a code library in a ZIP file.</description>
        <label>StaticResource</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__SynonymDictionary</fullName>
        <active>true</active>
        <label>SynonymDictionary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Territory2</fullName>
        <active>true</active>
        <label>Territory2</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Territory2Model</fullName>
        <active>true</active>
        <label>Territory2Model</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Territory2Rule</fullName>
        <active>true</active>
        <label>Territory2Rule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Territory2Type</fullName>
        <active>true</active>
        <label>Territory2Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__TopicsForObjects</fullName>
        <active>true</active>
        <label>TopicsForObjects</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Translations</fullName>
        <active>true</active>
        <label>Translations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__UiPlugin</fullName>
        <active>true</active>
        <label>UiPlugin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__UserCriteria</fullName>
        <active>true</active>
        <label>UserCriteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ValidationRule</fullName>
        <active>true</active>
        <label>ValidationRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__VisualizationPlugin</fullName>
        <active>true</active>
        <label>VisualizationPlugin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WaveApplication</fullName>
        <active>true</active>
        <label>WaveApplication</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WaveDashboard</fullName>
        <active>true</active>
        <label>WaveDashboard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WaveDataflow</fullName>
        <active>true</active>
        <label>WaveDataflow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WaveDataset</fullName>
        <active>true</active>
        <label>WaveDataset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WaveLens</fullName>
        <active>true</active>
        <label>WaveLens</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WebLink</fullName>
        <active>true</active>
        <label>WebLink</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Workflow</fullName>
        <active>true</active>
        <label>Workflow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WorkflowAlert</fullName>
        <active>true</active>
        <label>WorkflowAlert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WorkflowFieldUpdate</fullName>
        <active>true</active>
        <label>WorkflowFieldUpdate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WorkflowKnowledgePublish</fullName>
        <active>true</active>
        <label>WorkflowKnowledgePublish</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WorkflowOutboundMessage</fullName>
        <active>true</active>
        <label>WorkflowOutboundMessage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WorkflowRule</fullName>
        <active>true</active>
        <label>WorkflowRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WorkflowTask</fullName>
        <active>true</active>
        <label>WorkflowTask</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__XOrgHub</fullName>
        <active>true</active>
        <label>XOrgHub</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>